fix header spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -42,3 +42,7 @@ body {
 p+p {
   text-indent: 0rem;
 }
+
+.site-name h1 {
+  margin-top: 0;
+}
